[package]
name = "amazon-sp-api"
version = "0.1.14"
edition = "2021"
description = "A library to make working with Amazon SP-API a bit easier."
repository = "https://github.com/EpixMan/Amazon-SP-API-rs"
keywords = ["Amazon", "sp-api"]
license = "MIT"
exclude = ["test.rs"]

[dependencies]
serde_json = "1.0.132"
serde = { version = "1.0.210", features = ["derive"] }
reqwest = { version = "0.12.8", features = ["json", "blocking"] }
thiserror = "1.0.65"
tokio = { version = "1.43.0", features = ["macros"]}
strum_macros = "0.26.4"
url = "2.5.4"